syntax = "proto3";

package auth;

service AuthService {
  rpc Register (RegisterRequest) returns (GenericResponse);
  rpc Login (LoginRequest) returns (LoginResponse);
  rpc ValidateToken (ValidateTokenRequest) returns (ValidateTokenResponse);
}

message RegisterRequest {
  string username = 1;
  string email = 2;
  string password = 3;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
}

message ValidateTokenRequest {
  string token = 1;
}

message ValidateTokenResponse {
  bool valid = 1;
  int32 id = 2;
  string email = 3;
  string username = 4;
  string role = 5;
}

message GenericResponse {
  string message = 1;
}
